# GALIAIS-Nodes

./: .comfyignore  .gitignore  README.md  __init__.py  build_runtime_db.py  galiais_character_core.py  galiais_prompt_core.py  nodes_galiais_character_prompt.py  nodes_galiais_prompt_style.py  nodes_galiais_prompt_system.py  pyproject.toml  test_build_runtime_db.py  test_prompt_p0.py
.github/workflows/: publish_action.yml
docs/plans/: 2026-06-13-p0-p2-refactor-and-enterprise-roadmap.md
docs/workflows/: enterprise-character-prompt-workflow.json
web/js/: galiais_nodes_api_cache.js  galiais_nodes_composer_ui.js  galiais_nodes_danbooru_lazy_select.js  galiais_nodes_field_map.js  galiais_nodes_prompt_viewer_ui.js
